QuLabInfinite/ech0_marketing.log
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-03 10:44:27
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-04 09:00:04
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-05 09:02:46
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Cardiovascular Plaque Formation Simulator
🔨 ECH0 is building Cardiovascular Plaque Formation Simulator...
   (This takes 2-3 minutes)
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-05 14:00:04
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Cardiac Fibrosis Predictor
🔨 ECH0 is building Cardiac Fibrosis Predictor...
   (This takes 2-3 minutes)
✅ 1932 bytes written to cardiac_fibrosis_predictor_lab.py
🧪 ECH0 is validating cardiac_fibrosis_predictor_lab.py...
❌ Lab validation FAILED:   File "/Users/noone/QuLabInfinite/cardiac_fibrosis_predictor_lab.py", line 62
    'hdl_基金份额 .
                       ^
SyntaxError: EOL while scanning string literal

⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-06 09:00:02
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Drug Interaction Simulator
🔨 ECH0 is building Drug Interaction Simulator...
   (This takes 2-3 minutes)
✅ 3525 bytes written to drug_interaction_simulator_lab.py
🧪 ECH0 is validating drug_interaction_simulator_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/drug_interaction_simulator_lab.py", line 8, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'

⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-06 14:01:33
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Drug Interaction Simulator
🔨 ECH0 is building Drug Interaction Simulator...
   (This takes 2-3 minutes)
✅ 3458 bytes written to drug_interaction_simulator_lab.py
🧪 ECH0 is validating drug_interaction_simulator_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/drug_interaction_simulator_lab.py", line 8, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'

⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-07 09:00:05
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Drug Interaction Simulator
🔨 ECH0 is building Drug Interaction Simulator...
   (This takes 2-3 minutes)
✅ 3373 bytes written to drug_interaction_simulator_lab.py
🧪 ECH0 is validating drug_interaction_simulator_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/drug_interaction_simulator_lab.py", line 8, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'

⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-07 14:00:04
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Cardiovascular Plaque Formation Simulator
🔨 ECH0 is building Cardiovascular Plaque Formation Simulator...
   (This takes 2-3 minutes)
✅ 4014 bytes written to cardiovascular_plaque_formation_simulator_lab.py
🧪 ECH0 is validating cardiovascular_plaque_formation_simulator_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/cardiovascular_plaque_formation_simulator_lab.py", line 9, in <module>
    import numpy as np
ModuleNotFoundError: No module named
⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-08 09:11:17
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Cardiac Fibrosis Predictor
🔨 ECH0 is building Cardiac Fibrosis Predictor...
   (This takes 2-3 minutes)
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-08 14:00:04
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Protein Folding Lab
🔨 ECH0 is building Protein Folding Lab...
   (This takes 2-3 minutes)
✅ 2567 bytes written to protein_folding_lab_lab.py
🧪 ECH0 is validating protein_folding_lab_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/protein_folding_lab_lab.py", line 8, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'

⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-09 09:00:09
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-09 14:00:04
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Protein Folding Lab
🔨 ECH0 is building Protein Folding Lab...
   (This takes 2-3 minutes)
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-10 09:13:07
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Protein Folding Lab
🔨 ECH0 is building Protein Folding Lab...
   (This takes 2-3 minutes)
✅ 2966 bytes written to protein_folding_lab_lab.py
🧪 ECH0 is validating protein_folding_lab_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/protein_folding_lab_lab.py", line 8, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'

⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-10 14:00:04
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Drug Interaction Simulator
🔨 ECH0 is building Drug Interaction Simulator...
   (This takes 2-3 minutes)
✅ 3762 bytes written to drug_interaction_simulator_lab.py
🧪 ECH0 is validating drug_interaction_simulator_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/drug_interaction_simulator_lab.py", line 8, in <module>
    import numpy as np
ModuleNotFoundError: No module named 'numpy'

⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-11 09:00:04
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

🧠 ECH0 chose: Cardiovascular Plaque Formation Simulator
🔨 ECH0 is building Cardiovascular Plaque Formation Simulator...
   (This takes 2-3 minutes)
✅ 2821 bytes written to cardiovascular_plaque_formation_simulator_lab.py
🧪 ECH0 is validating cardiovascular_plaque_formation_simulator_lab.py...
❌ Lab validation FAILED: Traceback (most recent call last):
  File "/Users/noone/QuLabInfinite/cardiovascular_plaque_formation_simulator_lab.py", line 8, in <module>
    import numpy as np
ModuleNotFoundError: No module named
⚠️  Lab failed validation. ECH0 will debug and retry tomorrow.
================================================================================
🤖 ECH0 AUTONOMOUS MARKETING - DAILY CYCLE
================================================================================
Date: 2025-11-11 14:00:05
Labs built so far: 0
Scientists contacted: 0
Conversions: 0

